--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=Shift_JIS">
 <title>boon</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S8QL9J7T82"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S8QL9J7T82');
+</script>
 <style type="text/css">
 <!--
 
